<resources>
    <string name="app_name">Anime Explorer</string>
    <string name="app_title">🎌 Anime Explorer</string>
    <string name="discover_text">Discover trending anime</string>
    <string name="search_hint">Search anime…</string>
    <string name="search_icon_desc">Search icon</string>
    <string name="filter_icon_desc">Filter icon</string>
    <string name="search_results">Search Results</string>
    <string name="recommended_text">Recommended For You</string>
    <string name="featured_text">Featured</string>
    <string name="trending_text">Trending This Season</string>
    <string name="anime_image_desc">Anime cover image</string>
    <string name="anime_title">Anime Title</string>
    <string name="anime_info">⭐ %1$d • %2$s • %3$d eps</string>
    <string name="btn_completed">Completed</string>
    <string name="btn_remove">Remove</string>
    <string name="delete_button_desc">Delete item</string>
    <string name="mark_complete">Mark Complete</string>
    <string name="my_list">My List</string>
    <string name="add_to_my_list">Add to My List</string>
    <string name="watchlist_title">My Watchlist</string>
</resources>
